--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,9 +62,13 @@ alloy = { version = "0.8", features = [
 	"json-rpc",
 	"transports",
 	"k256",
+	"signer-aws",
 ] }
 k256 = "0.13.1"
 sha3 = "0.10.8"
+
+aws-sdk-kms = "1.54.0"
+aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
 
 miniscript = "11.0.0"
 bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-rpc", branch = "reqwest-migration" }
