CCCP-475, fix: make `private_key` field optional

--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -1,8 +1,13 @@
 system:
-  private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
   keystore_path: "<YOUR_KEYSTORE_PATH>"
   keystore_password: "<YOUR_KEYSTORE_PASSWORD>"
   debug_mode: false
+
+signer_config:
+  # Two parameters below are optional, but one of them must be provided.
+  # `kms_key_id` has higher priority than `private_key`.
+  kms_key_id: "<YOUR_KMS_KEY_ID>"
+  private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
 
 btc_provider:
   id: 10001
