--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -33,3 +33,4 @@ url = { workspace = true }
 sha3 = { workspace = true }
 k256 = { workspace = true }
 rand = { workspace = true }
+secrecy = { workspace = true }
