CCCP-295, feat: init migrate-keystore cli

--- a/client/cli/Cargo.toml
+++ b/client/cli/Cargo.toml
@@ -17,7 +17,11 @@ futures = { workspace = true }
 thiserror = { workspace = true }
 serde_yaml = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
+tokio = { workspace = true, features = [
+	"signal",
+	"rt-multi-thread",
+	"parking_lot",
+] }
 
 # Bifrost Relayer
 br-client = { path = "../../client", default-features = false }
@@ -27,3 +31,4 @@ br-metrics = { path = "../../metrics", default-features = false }
 # Substrate
 sc-service = { workspace = true }
 sc-utils = { workspace = true }
+sc-cli = { workspace = true }
