--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -12,6 +12,7 @@ build = "build.rs"
 [dependencies]
 # General
 log = { workspace = true }
+hex = { workspace = true }
 env_logger = { workspace = true }
 chrono = { workspace = true }
 serde_yaml = { workspace = true }
@@ -30,6 +31,7 @@ eyre = { workspace = true }
 sentry = { workspace = true }
 aws-sdk-kms = { workspace = true }
 aws-config = { workspace = true }
+secrecy = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
@@ -42,6 +44,9 @@ br-metrics = { path = "../metrics", default-features = false }
 sc-cli = { workspace = true }
 sc-service = { workspace = true }
 sc-sysinfo = { workspace = true }
+sp-application-crypto = { workspace = true }
+sp-core = { workspace = true }
+sc-keystore = { workspace = true }
 prometheus-endpoint = { workspace = true }
 
 [build-dependencies]
