CCCP-488, test: test kms keystore

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -54,3 +54,4 @@ sc-service = { workspace = true }
 [dev-dependencies]
 serde_json = { workspace = true }
 array-bytes = { workspace = true }
+aws-config = { workspace = true }
