CCCP-488, support kms integrated keystore (#171)
* CCCP-488, feat: init kms keystore

* CCCP-488, chore: refactor

* CCCP-488, chore: refactor service

* CCCP-488, chore: add doc string

* CCCP-488, fix: resolve conflict

* CCCP-295, feat: init migrate-keystore cli

* CCCP-488, refactor: init new password keystore

* CCCP-488, fix: remove key_pair() usage

* CCCP-488, fix: update migrate-keystore cli

* CCCP-488, fix: support v1 keystore migration

* CCCP-488, fix: remove some unwrap

* CCCP-488, docs: add readme

* CCCP-488, fix: allow optional keystore config

* CCCP-488, test: test kms keystore

* CCCP-488, test: test kms keystore decryption

* CCCP-488, chore: apply cargo-clippy

* refactor: remove `Display` implementation for `HandlerType`

* CCCP-488, refactor: rewrite in dyn Trait

* CCCP-488, fix: use fixed length aes key

* CCCP-488, test: fix test_create_new_keypair_v1

* CCCP-488, fix: init aws client only once if needed

* CCCP-488, chore: check decrypted pair

* CCCP-488, chore: simplify expression

* CCCP-488, chore: remove redundant, rename variables

* CCCP-488, fix: wrap with block_in_place

* chore: remove unused config parameter

* chore: cleanup dependencies & migrate to 2024

* CCCP-488, fix: increase pending tx timeout

* CCCP-488, fix: use stable branch

---------

Co-authored-by: alstjd0921 <kwonarseus@gmail.com>

--- a/client/cli/Cargo.toml
+++ b/client/cli/Cargo.toml
@@ -10,20 +10,21 @@ repository = { workspace = true }
 
 [dependencies]
 # General
-log = { workspace = true }
 sentry = { workspace = true }
-chrono = { workspace = true }
 futures = { workspace = true }
-thiserror = { workspace = true }
 serde_yaml = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
+tokio = { workspace = true, features = [
+	"signal",
+	"rt-multi-thread",
+	"parking_lot",
+] }
 
 # Bifrost Relayer
-br-client = { path = "../../client", default-features = false }
 br-primitives = { path = "../../primitives", default-features = false }
 br-metrics = { path = "../../metrics", default-features = false }
 
 # Substrate
 sc-service = { workspace = true }
 sc-utils = { workspace = true }
+sc-cli = { workspace = true }
