--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -1,13 +1,18 @@
 system:
-  keystore_path: "<YOUR_KEYSTORE_PATH>"
-  keystore_password: "<YOUR_KEYSTORE_PASSWORD>"
   debug_mode: false
 
 signer_config:
   # Two parameters below are optional, but one of them must be provided.
   # `kms_key_id` has higher priority than `private_key`.
-  kms_key_id: "<YOUR_KMS_KEY_ID>"
+  kms_key_id: "<YOUR_KMS_KEY_ID_FOR_SIGNER>"
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
+
+keystore_config:
+  path: "<YOUR_KEYSTORE_PATH>"
+  # Two parameters below are optional, but one of them must be provided.
+  # `kms_key_id` has higher priority than `password`.
+  kms_key_id: "<YOUR_KMS_KEY_ID_FOR_KEYSTORE>"
+  password: "<YOUR_KEYSTORE_PASSWORD>"
 
 btc_provider:
   id: 10000
@@ -62,7 +67,6 @@ evm_providers:
     block_confirmations: 7
     is_relay_target: false
     eip1559: true
-    min_priority_fee: 30000000000
     socket_address: "0x050606CC2Bcd9504991Be2c309D6c6c832Bb5bd0"
     authority_address: "0x7F48909fBd1E38f1e05B5E326A44175fc2462B13"
   - name: "base"
@@ -91,7 +95,6 @@ evm_providers:
     block_confirmations: 3
     is_relay_target: false
     eip1559: false
-    min_gas_price: 30000000000
     socket_address: "0x4C7a44F3FB37A53F33D3fe3cCdE97A444F105239"
     authority_address: "0xA069a57426Cd4c53925c1847Bec01aAB832A5118"
 
