--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -12,9 +12,9 @@ build = "build.rs"
 [dependencies]
 # General
 log = { workspace = true }
+hex = { workspace = true }
 env_logger = { workspace = true }
 chrono = { workspace = true }
-serde_yaml = { workspace = true }
 alloy = { workspace = true }
 futures = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
@@ -25,11 +25,10 @@ tokio = { workspace = true, features = [
 ] }
 miniscript = { workspace = true }
 bitcoincore-rpc = { workspace = true }
-subxt = { workspace = true }
-eyre = { workspace = true }
 sentry = { workspace = true }
 aws-sdk-kms = { workspace = true }
 aws-config = { workspace = true }
+secrecy = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
@@ -42,6 +41,7 @@ br-metrics = { path = "../metrics", default-features = false }
 sc-cli = { workspace = true }
 sc-service = { workspace = true }
 sc-sysinfo = { workspace = true }
+sp-application-crypto = { workspace = true }
 prometheus-endpoint = { workspace = true }
 
 [build-dependencies]
