--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-resolver = "2"
+resolver = "3"
 members = [
 	"client",
 	"client/cli",
@@ -15,7 +15,7 @@ panic = "unwind"
 [workspace.package]
 authors = ["bifrost-platform"]
 homepage = "https://www.bifrostnetwork.com"
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0"
 repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 
@@ -23,7 +23,7 @@ repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 # General
 log = "0.4.20"
 env_logger = "0.10.0"
-sentry = { version = "0.35.0", default-features = false, features = [
+sentry = { version = "0.36.0", default-features = false, features = [
 	"reqwest",
 	"rustls",
 	"backtrace",
@@ -36,18 +36,17 @@ secrecy = { version = "0.8.0", default-features = false, features = [
 ] }
 
 async-trait = "0.1.73"
-async-recursion = "1.0.5"
 clap = "4.4.6"
-cron = "0.12.0"
+cron = "0.15.0"
 chrono = "0.4.31"
-thiserror = "1.0.49"
+thiserror = "2.0.11"
 futures = "0.3.28"
 reqwest = { version = "0.12.5", default-features = false, features = [
 	"rustls-tls",
 	"json",
 	"http2",
 ] }
-rand = "0.8.5"
+rand = "0.9.0"
 lazy_static = "1.4.0"
 url = "2.5.0"
 array-bytes = "6.1"
@@ -70,6 +69,7 @@ alloy = { version = "0.8", features = [
 ] }
 k256 = "0.13.1"
 sha3 = "0.10.8"
+aes-gcm = "0.10.3"
 
 aws-sdk-kms = "1.54.0"
 aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
@@ -77,10 +77,10 @@ aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
 miniscript = "11.0.0"
 bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-rpc", branch = "reqwest-migration" }
 
-tokio = "1.33.0"
-tokio-stream = "0.1.14"
+tokio = "1.43.0"
+tokio-stream = "0.1.17"
 
-subxt = "0.37.0"
+subxt = "0.39.0"
 
 # Substrate Clients
 sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2407" }
