--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 resolver = "3"
 members = [
-    "client",
-    "client/cli",
-    "metrics",
-    "periodic",
-    "primitives",
-    "relayer",
+	"client",
+	"client/cli",
+	"metrics",
+	"periodic",
+	"primitives",
+	"relayer",
 ]
 
 [profile.release]
@@ -24,15 +24,15 @@ repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 log = "0.4.20"
 env_logger = "0.10.0"
 sentry = { version = "0.36.0", default-features = false, features = [
-    "reqwest",
-    "rustls",
-    "backtrace",
-    "contexts",
-    "panic",
+	"reqwest",
+	"rustls",
+	"backtrace",
+	"contexts",
+	"panic",
 ] }
 secrecy = { version = "0.8.0", default-features = false, features = [
-    "alloc",
-    "serde",
+	"alloc",
+	"serde",
 ] }
 
 async-trait = "0.1.73"
@@ -42,9 +42,9 @@ chrono = "0.4.31"
 thiserror = "2.0.11"
 futures = "0.3.28"
 reqwest = { version = "0.12.5", default-features = false, features = [
-    "rustls-tls",
-    "json",
-    "http2",
+	"rustls-tls",
+	"json",
+	"http2",
 ] }
 rand = "0.9.0"
 lazy_static = "1.4.0"
@@ -59,10 +59,10 @@ serde_json = "1.0.107"
 
 hex = "0.4.3"
 alloy = { version = "0.12", default-features = false, features = [
-    "full",
-    "reqwest-rustls-tls",
-    "json-rpc",
-    "signer-aws",
+	"full",
+	"reqwest-rustls-tls",
+	"json-rpc",
+	"signer-aws",
 ] }
 k256 = "0.13.1"
 sha3 = "0.10.8"
@@ -90,6 +90,9 @@ prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-featu
 # Substrate Primitives
 sp-core = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2407" }
 sp-application-crypto = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2407" }
+parity-scale-codec = { version = "3.6.12", default-features = false, features = [
+	"derive",
+] }
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2407" }
