--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,9 @@ prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-featu
 # Substrate Primitives
 sp-core = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2506" }
 sp-application-crypto = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2506" }
+parity-scale-codec = { version = "3.6.12", default-features = false, features = [
+    "derive",
+] }
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2506" }
