--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,28 +10,30 @@ repository = { workspace = true }
 
 [dependencies]
 # General
+hex = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 miniscript = { workspace = true }
 log = { workspace = true }
-rand = { workspace = true }
 sentry = { workspace = true }
-ethers = { workspace = true }
 serde_json = { workspace = true }
-serde_yaml = { workspace = true }
 tokio-stream = { workspace = true }
 async-trait = { workspace = true }
-async-recursion = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = [
 	"signal",
 	"rt-multi-thread",
 	"parking_lot",
 ] }
-k256 = { workspace = true, features = ["ecdsa"] }
-sha3 = { workspace = true }
 subxt = { workspace = true }
 url = { workspace = true }
 array-bytes = { workspace = true }
+alloy = { workspace = true }
+tower = { workspace = true }
+eyre = { workspace = true }
+aws-sdk-kms = { workspace = true }
+aes-gcm = { workspace = true }
+rand = { workspace = true }
+reqwest = { workspace = true }
 
 # subs
 sc-keystore = { workspace = true }
@@ -48,3 +50,4 @@ sc-service = { workspace = true }
 [dev-dependencies]
 serde_json = { workspace = true }
 array-bytes = { workspace = true }
+aws-config = { workspace = true }
