--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -15,9 +15,8 @@ sentry = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
 cron = { workspace = true }
-ethers = { workspace = true }
+alloy = { workspace = true }
 serde_json = { workspace = true }
-serde_yaml = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -27,8 +26,9 @@ bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
 array-bytes = { workspace = true }
 miniscript = { workspace = true }
+eyre = { workspace = true }
+sc-service = { workspace = true }
 
 # Bifrost Relayer
-br-cli = { path = "../client/cli", default-features = false }
 br-client = { path = "../client", default-features = false }
 br-primitives = { path = "../primitives", default-features = false }
