--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,12 +58,12 @@ serde = "1.0.188"
 serde_json = "1.0.107"
 
 hex = "0.4.3"
-alloy = { git = "https://github.com/alstjd0921/alloy", default-features = false, features = [
+alloy = { version = "1.0.16", default-features = false, features = [
     "full",
     "reqwest-rustls-tls",
     "json-rpc",
-    "signer-aws",
-], branch = "deser-log" }
+    "signer-aws"
+] }
 k256 = "0.13.1"
 sha3 = "0.10.8"
 aes-gcm = "0.10.3"
