--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ cron = "0.15.0"
 chrono = "0.4.31"
 thiserror = "2.0.11"
 futures = "0.3.28"
-reqwest = { version = "0.12.23", default-features = false, features = [
+reqwest = { version = "0.12.24", default-features = false, features = [
     "rustls-tls",
     "json",
     "http2",
@@ -49,7 +49,7 @@ reqwest = { version = "0.12.23", default-features = false, features = [
 rand = "0.9.0"
 lazy_static = "1.4.0"
 url = "2.5.0"
-array-bytes = "6.1"
+array-bytes = "9.3.0"
 eyre = "0.6"
 tower = "0.5.0"
 
@@ -71,8 +71,8 @@ aes-gcm = "0.10.3"
 aws-sdk-kms = "1.54.0"
 aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
 
-miniscript = "11.0.0"
-bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-rpc", branch = "reqwest-migration" }
+miniscript = "12.3.5"
+bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-rpc", branch = "0.19.0-reqwest" }
 
 tokio = "1.43.0"
 tokio-stream = "0.1.17"
@@ -90,6 +90,9 @@ prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-featu
 # Substrate Primitives
 sp-core = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2506" }
 sp-application-crypto = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2506" }
+parity-scale-codec = { version = "3.6.12", default-features = false, features = [
+    "derive",
+] }
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-stable2506" }
