--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -45,6 +45,7 @@ evm_providers:
     eip1559: true
     socket_address: "0xdAcc4aeea580F782bB991eA862e1a57827Ea9D68"
     authority_address: "0xff95B9861eE5d44eC0b489B0DCB73932c7C7074B"
+    chainlink_jpy_usd_address: "0x8A6af2B75F23831ADc973ce6288e5329F63D86c6"
   - name: "bsc-testnet"
     id: 97
     provider: "<YOUR_BSC_TESTNET_RPC_ENDPOINT>"
