CCCP-523, feat: init hooks and oracle contract

--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -30,6 +30,8 @@ evm_providers:
     is_relay_target: true
     socket_address: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
     authority_address: "0x0000000000000000000000000000000000000400"
+    hooks_address: "TODO"
+    oracle_address: "0x41B8ab388Fe34Cb15b0D5Ac33781f4748be40410"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
     bitcoin_socket_address: "0xc292D9d5c31D5246cfAC67ba91202bbCF0AA8108"
     socket_queue_address: "0x0000000000000000000000000000000000000101"
@@ -45,6 +47,7 @@ evm_providers:
     eip1559: true
     socket_address: "0xdAcc4aeea580F782bB991eA862e1a57827Ea9D68"
     authority_address: "0xff95B9861eE5d44eC0b489B0DCB73932c7C7074B"
+    hooks_address: "TODO"
     chainlink_jpy_usd_address: "0x8A6af2B75F23831ADc973ce6288e5329F63D86c6"
   - name: "bsc-testnet"
     id: 97
@@ -55,6 +58,7 @@ evm_providers:
     eip1559: true
     socket_address: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
     authority_address: "0xCf9f6428A309b6652a1dfaA4d8aB8B61C9c7E8CF"
+    hooks_address: "TODO"
     chainlink_usdc_usd_address: "0x90c069C4538adAc136E051052E14c1cD799C41B7"
     chainlink_usdt_usd_address: "0xEca2605f0BCF2BA5966372C99837b1F182d3D620"
     chainlink_dai_usd_address: "0xE4eE17114774713d2De0eC0f035d4F7665fc025D"
@@ -69,6 +73,7 @@ evm_providers:
     eip1559: true
     socket_address: "0xdAcc4aeea580F782bB991eA862e1a57827Ea9D68"
     authority_address: "0x15EDC0c65004548fa787Bc01e533366674946C5F"
+    hooks_address: "TODO"
   - name: "arbitrum-sepolia"
     id: 421614
     provider: "<YOUR_ARBITRUM_SEPOLIA_RPC_ENDPOINT>"
@@ -79,6 +84,7 @@ evm_providers:
     eip1559: true
     socket_address: "0xd1E060FD930B75DA9A709c91E6Ad03B330Fb2950"
     authority_address: "0x4dA97eCD85d4EE00E26C5f3aF21e6Da7bc3F71e2"
+    hooks_address: "TODO"
 
 handler_configs:
   - handler_type: Socket
