chore: Update dependencies and runtime types in `Cargo.toml` and `substrate.rs`

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -11,6 +11,7 @@ repository = { workspace = true }
 [dependencies]
 # General
 alloy = { workspace = true }
+parity-scale-codec = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = [
