--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -27,3 +27,4 @@ url = { workspace = true }
 sha3 = { workspace = true }
 k256 = { workspace = true }
 secrecy = { workspace = true }
+parity-scale-codec = { workspace = true }
