CCCP-524, feature: Add `SocketQueuePoller` with async handler initialization and Substrate block processing

--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -43,6 +43,7 @@ sc-service = { workspace = true }
 sc-sysinfo = { workspace = true }
 sp-application-crypto = { workspace = true }
 prometheus-endpoint = { workspace = true }
+subxt = { workspace = true }
 
 [build-dependencies]
 substrate-build-script-utils = { workspace = true }
